// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`GlossaryEditorCardComponent matches snapshot 1`] = `
<BoxShadow
  blurRadius={10}
  className="usa-grid-full section-padded-inner-container glossary-editor-card editor-container-hidden"
  color="rgba(0,0,0,.15)"
  inset={false}
  is="div"
  offsetX={3}
  offsetY={2}
  spreadRadius={1}
  style={Object {}}
>
  <div
    className="usa-grid-full glossary-editor-card-top"
  >
    <div
      className="title-container editor-hidden editor-hidden--title"
    >
      <h4>
        6/8
      </h4>
    </div>
    <div
      className="actions-container"
    >
      <div
        className="actions-inner-container"
      >
        <InteractiveElement
          className=""
          onClick={[Function]}
          role="link"
          type="div"
        >
          Edit
        </InteractiveElement>
      </div>
    </div>
  </div>
  <div
    className="usa-grid-full glossary-editor-card-top"
  >
    <div
      className="title-container link-container editor-hidden editor-hidden--title"
    >
      <h4>
        <i>
          There is no link for this term
        </i>
      </h4>
    </div>
  </div>
  <div
    className="usa-grid-full glossary-editor-card-definition editor-hidden editor-hidden--definition"
  >
    Definition.
  </div>
  <GlossaryEditorCardBottom
    dateUpdated="2018-02-07T15:33:52.986137Z"
    hasErrored={false}
    id={3}
    isArchived={false}
    isNewTerm={false}
    showEmptyWarning={false}
    showInvalidLinkWarning={false}
    submitGlossaryTerm={[Function]}
    updatedBy="Leah Shadtrach"
  />
</BoxShadow>
`;

exports[`GlossaryEditorCardComponent matches snapshot when displayZeroLengthAlert is true 1`] = `
<BoxShadow
  blurRadius={10}
  className="usa-grid-full section-padded-inner-container glossary-editor-card editor-container-hidden"
  color="rgba(0,0,0,.15)"
  inset={false}
  is="div"
  offsetX={3}
  offsetY={2}
  spreadRadius={1}
  style={Object {}}
>
  <div
    className="usa-grid-full glossary-editor-card-top"
  >
    <div
      className="title-container editor-hidden editor-hidden--title"
    >
      <h4>
        6/8
      </h4>
    </div>
    <div
      className="actions-container"
    >
      <div
        className="actions-inner-container"
      >
        <InteractiveElement
          className=""
          onClick={[Function]}
          role="link"
          type="div"
        >
          Edit
        </InteractiveElement>
      </div>
    </div>
  </div>
  <div
    className="usa-grid-full glossary-editor-card-top"
  >
    <div
      className="title-container link-container editor-hidden editor-hidden--title"
    >
      <h4>
        <i>
          There is no link for this term
        </i>
      </h4>
    </div>
  </div>
  <div
    className="usa-grid-full glossary-editor-card-definition editor-hidden editor-hidden--definition"
  >
    Definition.
  </div>
  <GlossaryEditorCardBottom
    dateUpdated="2018-02-07T15:33:52.986137Z"
    hasErrored={false}
    id={3}
    isArchived={false}
    isNewTerm={false}
    showEmptyWarning={true}
    showInvalidLinkWarning={false}
    submitGlossaryTerm={[Function]}
    updatedBy="Leah Shadtrach"
  />
</BoxShadow>
`;
